Se agregan archivos

--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -18,15 +18,20 @@
         <nav class="navbar navbar-expand-lg navbar-custom px-3">
     <!--Este es el titulo de mi pagina-->
                 <h1 class="titulos">HGMATES</h1>
-                <img id="logo_principal" src="../assets/logos/logoHG.png" alt="Logo marca">
-            <div class="collapse navbar-collapse">
+                <img id="logo_principal" src="./assets/logos/logoHG.png" alt="Logo marca">
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item"><a href="../index.html">INICIO</a></li>
-                    <li class="nav-item"><a href="./productos.html">PRODUCTOS</a></li>
-                    <li class="nav-item"><a href="./sobrenosotros.html">SOBRE NOSOTROS</a></li>
-                    <li class="nav-item"><a href="">CLIENTES</a></li>
-                    <li class="nav-item"><a href="./ppff.html">PREGUNTAS FRECUENTES</a></li>
-                    <li class="nav-item"><a href="./contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">PRODUCTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sobrenosotros.html">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">CLIENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ppff.html">PREGUNTAS FRECUENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
                 </ul>
                 <form class="d-flex align-items-center" role="search">
                     <div class="input-group search-input">
@@ -38,7 +43,7 @@
                 <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
             </div>
         </nav>
-    
+    </header>
     </header>
     <main>
         <h1 class="titulos">NUESTROS CLIENTES</h1>
