--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <!--Link archivos de estilos-->
     <link rel="stylesheet" href="/styles/style.css">
-     <!--Link de bootstrap-->
+    <!--Link de bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>HG-MATES</title>
 </head>
@@ -26,11 +26,11 @@
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item"><a class="nav-link" href="">INICIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/productos.html">PRODUCTOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/sobrenosotros.html">SOBRE NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/clientes.html">CLIENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/ppff.html">PREGUNTAS FRECUENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/productos.html">PRODUCTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/sobrenosotros.html">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/clientes.html">CLIENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/ppff.html">PREGUNTAS FRECUENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/contacto.html">CONTACTO</a></li>
                 </ul>
                 <form class="d-flex align-items-center" role="search">
                     <div class="input-group search-input">
@@ -38,8 +38,8 @@
                         <span class="input-group-text search-shortcut">Ctrl K</span>
                     </div>
                 </form>
-                <img src="./assets/iconos/avatar.png" alt="icono login">
-                <img src="./assets/iconos/carrito.png" alt="icono carrito de compras"> 
+                <img src="../assets/iconos/avatar.png" alt="icono login">
+                <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
             </div>
         </nav>
     </header>
