--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-custom px-3">
     <!--Este es el titulo de mi pagina-->
                 <h1 class="titulos">HGMATES</h1>
-                <img id="logo_principal" src="../assets/logos/logoHG.png" alt="Logo marca">
+                <img id="logo_principal" src="./assets/logos/logoHG.png" alt="Logo marca">
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
