solucionando accesos del nav3

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <div class="collapse navbar-collapse" id="navbarMain">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item"><a class="nav-link" href="">INICIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/productos.html">PRODUCTOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/sobrenosotros.html">SOBRE NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/clientes.html">CLIENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/ppff.html">PREGUNTAS FRECUENTES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">PRODUCTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/sobrenosotros.html">SOBRE NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/clientes.html">CLIENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/ppff.html">PREGUNTAS FRECUENTES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">CONTACTO</a></li>
                 </ul>
                 <form class="d-flex align-items-center" role="search">
                     <div class="input-group search-input">
