--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -39,7 +39,7 @@
                         <span class="input-group-text search-shortcut">Ctrl K</span>
                     </div>
                 </form>
-                <img src="../assets/iconos/avatar.png" alt="icono login">
+                <img src="avatar.png" alt="icono login">
                 <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
             </div>
         </nav>
