--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -40,7 +40,7 @@
                     </div>
                 </form>
                 <img src="avatar.png" alt="icono login">
-                <img src="../assets/iconos/carrito.png" alt="icono carrito de compras"> 
+                <img src="carrito.png" alt="icono carrito de compras"> 
             </div>
         </nav>
     </header>
