--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -36,7 +36,7 @@
                 <form class="d-flex align-items-center" role="search">
                     <div class="input-group search-input">
                         <input class="form-control" type="search" placeholder="Search" aria-label="Search" />
-                        <span class="input-group-text search-shortcut">Ctrl K</span>
+                        <span class="input-group-text search-shortcut">Buscar</span>
                     </div>
                 </form>
                 <img src="../assets/iconos/avatar.png" alt="icono login">
