--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -122,5 +122,7 @@
             <p>Diseño por Jonatan</p>
         </div>    
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>    
+
 </body>
 </html>
