--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
      <title>HG MATES - Clientes</title>
 </head>
-<body>
+<body class="clientes">
     <!--Este es el titulo de mi pagina-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-custom px-3">
@@ -44,7 +44,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="Cliente_Main">
         <h1 class="titulos">NUESTROS CLIENTES</h1>
             <div class="container mt-5">
                 <h3 class="text-center mb-4">Nuestras Marcas</h3>
@@ -122,6 +122,6 @@
             <p>Diseño por Jonatan</p>
         </div>        
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>     
 </body>
 </html>
