--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <!--Link de bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>HG-MATES</title>
 </head>
 <body>
@@ -73,7 +74,7 @@
                     <div class="card-body">
                         <h5 class="card-title">MATES</h5>
                         <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut dolor culpa</p>
-                        <a href="#" class="btn btn-primary">Agregar a Carrito</a>
+                        <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
                     </div>
                 </div>
                 <div class="card tarjetas2">
@@ -81,7 +82,7 @@
                     <div class="card-body">
                         <h5 class="card-title">TERMOS</h5>
                         <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut dolor culpa</p>
-                        <a href="#" class="btn btn-primary">Agregar a Carrito</a>
+                        <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
                     </div>
                 </div>
                 <div class="card tarjetas2" >
@@ -89,7 +90,7 @@
                     <div class="card-body">
                         <h5 class="card-title">CUCHILLOS</h5>
                         <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut dolor culpa</p>
-                        <a href="#" class="btn btn-primary">Agregar a Carrito</a>
+                        <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
                     </div>
                 </div>
             </div>
@@ -99,16 +100,16 @@
         <div class="pie_de_pagina_grid">
             <div>
                 <h3>NUESTRAS REDES</h3>
-                <a href="https://www.x.com">
+                <a href="https://www.x.com" target="_blank">
                     <img src="./assets/redesSociales/logoX.png" alt="logo twitter">
                 </a>
-                <a href="https://www.instagram.com/hgmates">
+                <a href="https://www.instagram.com/hgmates" target="_blank">
                     <img src="./assets/redesSociales/logoIg.png" alt="logo ig">
                 </a>   
-                <a href="https://www.facebook.com">
+                <a href="https://www.facebook.com" target="_blank">
                     <img src="./assets/redesSociales/logoFb.png" alt="logo facebook">
                 </a>     
-                    <a href="https://www.tiktok.com">
+                    <a href="https://www.tiktok.com" target="_blank">
                     <img src="./assets/redesSociales/tiktok.png" alt="logo facebook">
                 </a>    
             </div>
