--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../styles/style.css">
     <!--Link de bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <title>HG MATES - PRODUCTOS</title>
 </head>
 <body>
@@ -82,25 +84,25 @@
                 </div>
             </div>            
             <div class="bloque_productos">
-                <div class="productos">
+                <div class="productos animate__zoomInRight">
                     <img src="../assets/productos/imperial1.JPG"  alt="">
                     <h3>Mate Imperial </h3>
                     <span>$ 2000 - 10% abonando en efectivo</span>
                     <button class="button carrito"> Agregar a carrito</button>
                 </div>
-                <div class="productos">
+                <div class="productos animate__zoomInRight">
                     <img src="../assets/productos/imperial2.JPG"  alt="">
                     <h3>Mate Imperial</h3>
                     <span>$ 2040 - 10% abonando en efectivo</span>
                     <button class="button carrito"> Agregar a carrito</button>
                 </div>
-                <div class="productos">
+                <div class="productos animate__zoomInRight">
                     <img src="../assets/productos/camionero1.jpg"  alt="">
                     <h3>Mate Camionero</h3>
                     <span>$ 3000 - 10% abonando en efectivo</span>
                     <button class="button carrito"> Agregar a carrito</button>
                 </div>
-                <div class="productos">
+                <div class="productos animate__zoomInRight">
                     <img src="../assets/productos/camionnero2.JPG"  alt="">
                     <h3>Mate Camionero</h3>
                     <span>$ 3000 - 10% abonando en efectivo</span>
@@ -113,16 +115,16 @@
         <div class="pie_de_pagina_grid">
             <div>
                 <h3>NUESTRAS REDES</h3>
-                <a href="https://www.x.com">
+                <a href="https://www.x.com" target="_blank">
                     <img src="../assets/redesSociales/logoX.png" alt="logo twitter">
                 </a>
-                <a href="https://www.instagram.com/hgmates">
+                <a href="https://www.instagram.com/hgmates" target="_blank">
                     <img src="../assets/redesSociales/logoIg.png" alt="logo ig">
                 </a>   
-                <a href="https://www.facebook.com">
+                <a href="https://www.facebook.com" target="_blank">
                     <img src="../assets/redesSociales/logoFb.png" alt="logo facebook">
                 </a>     
-                    <a href="https://www.tiktok.com">
+                    <a href="https://www.tiktok.com" target="_blank">
                     <img src="../assets/redesSociales/tiktok.png" alt="logo facebook">
                 </a>    
             </div>
