--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Link de bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>HG-MATES</title>
 </head>
 <body>
@@ -45,23 +46,22 @@
         </nav>
     </header>
     <main>
-        <h2 class="titulos">Beneficios del Mate</h2>
-        <section>
-            <div>
-                <h3>Estimulación del sistema nervioso central</h3>
-                <p>La cafeína presente en el mate actúa como un estimulante, mejorando la concentración y brindando energía. </p>   
+        <section class="beneficios-section">
+            <h2>Beneficios del Mate</h2>
+
+            <div class="beneficio">
+                <h3><i class="fas fa-brain"></i> Estimulación del sistema nervioso central</h3>
+                <p>La cafeína presente en el mate actúa como un estimulante, mejorando la concentración y brindando energía.</p>
             </div>
-            <div>
-                <h3>Ayuda en la pérdida de peso</h3>
-                <p>El mate puede contribuir a la pérdida de peso y a la prevención de la diabetes. </p>
+
+            <div class="beneficio">
+                <h3><i class="fas fa-weight"></i> Ayuda en la pérdida de peso</h3>
+                <p>El mate puede contribuir a la pérdida de peso y a la prevención de la diabetes.</p>
             </div>
-            <div>
-                <h3>Prevención de enfermedades cardiovasculares</h3>
-                <p>El mate puede ayudar a mantener la salud cardiovascular al promover la circulación sanguínea y reducir los niveles de colesterol malo. </p>
-            </div>
-            <div>
-                <h3>Prevención de enfermedades cardiovasculares</h3>
-                <p>El mate puede ayudar a mantener la salud cardiovascular al promover la circulación sanguínea y reducir los niveles de colesterol malo. </p>
+
+            <div class="beneficio">
+                <h3><i class="fas fa-heartbeat"></i> Prevención de enfermedades cardiovasculares</h3>
+                <p>El mate puede ayudar a mantener la salud cardiovascular al promover la circulación sanguínea y reducir los niveles de colesterol malo.</p>
             </div>
         </section>
 <!--Seccion de prodcutos destacados-->
