--- a/pages/ppff.html
+++ b/pages/ppff.html
@@ -45,27 +45,27 @@
         </nav>
     </header>
     <main>
-        <section class="faq-section">
-             <details class="faq-item">
+        <section class="ppff-section">
+             <details class="ppff-item">
                 <summary>1. ¿Qué tipo de mates venden y cuál es el más recomendado para principiantes?</summary>
                 <p>Vendemos mates de calabaza, madera, acero inoxidable y cerámica. Para principiantes, recomendamos los de acero o cerámica ya que no requieren curado y son más fáciles de mantener.</p>
             </details>
 
-            <details class="faq-item">
+            <details class="ppff-item">
                 <summary>2. ¿Cómo se cura un mate de calabaza antes de usarlo?</summary>
                 <p>Se llena con yerba usada húmeda y un poco de agua caliente durante 24-48 horas. Luego se enjuaga bien y se repite el proceso una vez más. Esto evita que el mate tome sabor amargo o se agriete.</p>
             </details>
 
-            <details class="faq-item">
+            <details class="ppff-item">
                 <summary>3. ¿Hacen envíos a todo el país y al exterior?</summary>
                 <p>Sí, realizamos envíos a todo el país mediante correo o mensajería. También enviamos al exterior, dependiendo del país y las regulaciones aduaneras.</p>
             </details>
-            <details class="faq-item">
+            <details class="ppff-item">
                 <summary>4. ¿Ofrecen mates personalizados o grabados?</summary>
                 <p>Se llena con yerba usada húmeda y un poco de agua caliente durante 24-48 horas. Luego se enjuaga bien y se repite el proceso una vez más. Esto evita que el mate tome sabor amargo o se agriete.</p>
             </details>
 
-            <details class="faq-item">
+            <details class="ppff-item">
                 <summary>5. ¿Qué mantenimiento necesita un mate para que dure más tiempo?</summary>
                 <p>Recomendamos limpiarlo siempre después de usarlo, dejarlo secar boca abajo y no dejar yerba húmeda por muchas horas. En el caso de los mates de calabaza, evitar el uso de detergente y siempre secar bien después de cada uso.</p>
             </details>
