--- a/pages/productos.html
+++ b/pages/productos.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>            
-            <div class="producto">
+            <div class="productos-container">
                 <div class="producto animate__zoomInRight">
                     <img src="../assets/productos/imperial1.JPG"  alt="">
                     <h3>Mate Imperial </h3>
