--- a/pages/productos.html
+++ b/pages/productos.html
@@ -84,31 +84,42 @@
                 </div>
             </div>            
             <div class="productos-container">
-                <div class="producto animate__zoomInRight">
-                    <img src="../assets/productos/imperial1.JPG"  alt="">
-                    <h3>Mate Imperial </h3>
-                    <span>$ 2000 - 10% abonando en efectivo</span>
-                    <button class="button carrito"> Agregar a carrito</button>
+            <div class="producto animate__zoomInRight">
+                <img src="../assets/productos/imperial1.JPG" alt="">
+                <div>
+                <h3>Mate Imperial</h3>
+                <span>$ 2000 - 10% abonando en efectivo</span>
+                <button>Agregar a carrito</button>
                 </div>
-                <div class="producto animate__zoomInRight">
-                    <img src="../assets/productos/imperial2.JPG"  alt="">
-                    <h3>Mate Imperial</h3>
-                    <span>$ 2040 - 10% abonando en efectivo</span>
-                    <button class="button carrito"> Agregar a carrito</button>
+            </div>
+
+            <div class="producto animate__zoomInRight">
+                <img src="../assets/productos/imperial2.JPG" alt="">
+                <div>
+                <h3>Mate Imperial</h3>
+                <span>$ 2040 - 10% abonando en efectivo</span>
+                <button>Agregar a carrito</button>
                 </div>
-                <div class="producto animate__zoomInRight">
-                    <img src="../assets/productos/camionero1.jpg"  alt="">
-                    <h3>Mate Camionero</h3>
-                    <span>$ 3000 - 10% abonando en efectivo</span>
-                    <button class="button carrito"> Agregar a carrito</button>
+            </div>
+
+            <div class="producto animate__zoomInRight">
+                <img src="../assets/productos/camionero1.jpg" alt="">
+                <div>
+                <h3>Mate Camionero</h3>
+                <span>$ 3000 - 10% abonando en efectivo</span>
+                <button>Agregar a carrito</button>
                 </div>
-                <div class="producto animate__zoomInRight">
-                    <img src="../assets/productos/camionnero2.JPG"  alt="">
-                    <h3>Mate Camionero</h3>
-                    <span>$ 3000 - 10% abonando en efectivo</span>
-                    <button class="button carrito"> Agregar a carrito</button>
+            </div>
+
+            <div class="producto animate__zoomInRight">
+                <img src="../assets/productos/camionnero2.JPG" alt="">
+                <div>
+                <h3>Mate Camionero</h3>
+                <span>$ 3000 - 10% abonando en efectivo</span>
+                <button>Agregar a carrito</button>
                 </div>
-            </div>             
+            </div>
+            </div>
         </section>
     </main>
     <footer class="pie_de_pagina">
