--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -14,7 +14,7 @@
 
     <title>HG MATES - Clientes</title>
 </head>
-<body class="clientes">
+<body>
     <!--Este es el titulo de mi pagina-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-custom px-3">
