cambios en formulario de contacto9

--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -47,9 +47,9 @@
         </nav>
     </header>
     <main>
-        <h1 class="titulos">SOBRE NOSOTROS</h1>
+        <h1 class="sobrenosotros_princial titulos">SOBRE NOSOTROS</h1>
         <section class="sobrenosotros_principal">
-            <p>HG Mates es una empresa argentina dedicada a la venta de mates artesanales y accesorios relacionados con la cultura del mate. 
+            <p class="bloque_contenido">HG Mates es una empresa argentina dedicada a la venta de mates artesanales y accesorios relacionados con la cultura del mate. 
                 Nacida con la pasión por mantener viva una tradición tan arraigada en nuestro país, MateArte se posiciona como un puente entre lo clásico y lo moderno, 
                 ofreciendo productos únicos que combinan diseño, funcionalidad y un profundo respeto por la identidad cultural. Nos especializamos en mates de calabaza forrados en cuero,
                  mates de madera torneada, acero inoxidable, cerámica, y una variedad de bombillas y termos de excelente calidad. 
@@ -64,7 +64,7 @@
             <img class="foto_descripcion_empresa" src="../assets/mapa/mapa.png" alt="mapa de direccion del local">
             <img class="foto_descripcion_empresa" src="../assets/fondos/equipo.jpg" alt="equipo de trabajo">
 
-            <p>El proceso de elaboración de nuestros mates combina técnicas artesanales tradicionales con estándares modernos de calidad. 
+            <p class="bloque_contenido">El proceso de elaboración de nuestros mates combina técnicas artesanales tradicionales con estándares modernos de calidad. 
             Todo comienza con la selección cuidadosa de las materias primas. En el caso de los mates de calabaza, elegimos frutos secos y curados naturalmente, 
             libres de rajaduras, que luego se limpian, lijan y se someten al proceso de curado interno para asegurar su resistencia y durabilidad. Posteriormente, 
             se forran a mano con cuero genuino o sintético, cosido artesanalmente, y se les agrega una virola metálica en la boca para mayor resistencia. 
